styles.css
nav > ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
  background-color: rgb(183, 240, 183);
  position: sticky;
  top: 0;
  display: flex;
  justify-content: center;
}

nav li a {
  display: block;
  padding: 10px 20px;
  color: white;
  text-decoration: none;
  border-radius: 10px;
  border: 2px solid white;
  margin: 5px;
  font-size: 1.4rem;
  white-space: nowrap;
}

nav li a:hover {
  background-color: green;
}
body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  background-color: #f9f9f9;
}

h1 {
  text-align: center;
  font-size: 36px;
  margin: 20px 0;
}

h2 {
  text-align: center;
  font-size: 28px;
  margin-bottom: 20px;
}

h3 {
  text-align: center;
  font-size: 24px;
  margin-bottom: 15px;
}
h4 {
  text-align: center;
  font-size: 24px;
  margin-bottom: 15px;
}
main,
.story,
.About-Me,
.Interests,
.Project_Dates {
  width: 95%;
  margin: 20px auto;
  padding: 40px;
  border-radius: 10px;
  box-sizing: border-box;
}
main {
  background-color: lightcoral;
}
.story {
  background-color: lightblue;
}
.About-Me {
  background-color: lightcoral;
}
button {
  background-color: darkgreen;
  color: white;
  border: none;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  margin-top: 10px;
}
.Interests {
  background-color: lightblue;
}

.Projects-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center;
}
.Projects {
  width: 45%;
  max-height: 1000px;
  box-sizing: border-box;
  padding: 20px;
  border-radius: 10px;
  background-color: rgb(183, 240, 183);
  text-align: center;
}
.Projects img {
  display: block;
  margin: 0 auto 15px auto; /* centers image and adds space below */
}

.Projects li {
  list-style-position: inside;
  padding-left: 20px;
  margin: 0;
}

.Projects a {
  display: block;
}

.Projects button {
  display: block;
  margin: 0 auto;
}
.About-Me img {
  display: block;
  margin: 20px auto;
  width: 300px;
  border-radius: 10px;
}

.Project_Dates {
  background-color: rgb(236, 234, 142);
  text-align: center;
  width: 100%;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin: 0 auto;
  text-align: center;
}

th,
td {
  border: 1px solid black;
  padding: 12px;
}

ul {
  list-style-type: disc;
  padding-left: 20px;
  margin: 0;
}

button:hover {
  background-color: #2e8b57;
}

